[tool.poetry]
name = "demo"
version = "0.1.0"
description = "this is a demo"
authors = ["deep knowledge"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^3.0.0"
numpy = "^1.22.0"
requests = "^2.32.3"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
